# BCI_game

./: .gitignore  .pre-commit-config.yaml  20260510.bdf  README.md  TECHNICAL.md  accounts.json  bci_config.json  calibration.py  config.py  fill_report.py  log20260510.txt  main.py  pyproject.toml  requirements.txt  test_hdata.py  test_hdata_read.py  training_plan.json  ~$作品报告模版1.docx  参赛作品报告模版.docx  参赛作品报告模版1.docx  实验模式.md
bci/: config.py  data_reader.py  filter.py  hdata_attention.py  hdata_bridge.py  hdata_config.json  hdata_gyro.py  hdata_interface.py  hdata_recorder.py  hdata_session.py  hedf_interface.py
core/: asset_manager.py  audio_manager.py  state_machine.py
data/: __init__.py  memory_recipes.py  player_profile.py  recipes.py  score_manager.py  training_plan.py
game/: __init__.py  cup_manager.py  experiment_mode.py  hud.py  ingredient_manager.py  memory_mode.py  patience_bar.py  session.py  sprites.py  training_session.py
libs/: GDSClientAPI.lib  GDSServer.lib  HDataSystem.lib  HEDFWriter.lib  HEdfProcessor.lib  WinIo32.lib  WinIo64.lib  gHIamp.lib  gHIampFilter.h5
menu/: __init__.py  admin.py  bci_button.py  calibration.py  components.py  history.py  login.py  mode_selector.py  splash.py  summary.py  training_summary.py  transition.py
profiles/: 1.json  11.json  11_training.json  an.json  anan.json  bbh.json  btt.json  btt_training.json  cjy.json  czh.json  czh_training.json  default.json  fzy.json  fzy_training.json  hqm.json  hqm_training.json  lcy.json  lhz.json  ljy.json  ljy_training.json  lql.json  lql_training.json  lyq.json  lzh.json  (+10 more)
(+22 files in other folders)
