[project]
name = "bci-game"
version = "0.1.0"
description = "疯狂奶茶杯 - BCI主题休闲小游戏"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "N",       # pep8-naming
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "N802",    # function name should be lowercase (allow Chinese function names)
    "N803",    # argument name should be lowercase
    "N806",    # variable in function should be lowercase
    "RUF001",  # ambiguous unicode characters in string (Chinese text)
    "RUF002",  # ambiguous unicode characters in docstring (Chinese text)
    "RUF003",  # ambiguous unicode characters in comment (Chinese text)
    "SIM102",  # nested if statements (readability preference)
    "SIM105",  # contextlib.suppress (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"config.py" = ["E402", "F401"]
"__init__.py" = ["F401", "F403"]
"game/sprites.py" = ["F403", "F405"]
"game/ingredient_manager.py" = ["F403", "F405"]
"bci_cup_control.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["config", "game", "menu", "bci", "data", "utils"]
